--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,9 +11,9 @@
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
 
-        <%= f.password_field :password, autocomplete: "new-password", class: "fadeIn third field", placeholder: "***********" %>
+        <%= f.password_field :password, autocomplete: "new-password", class: "fadeIn third field", placeholder: "senha" %>
 
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "fadeIn third field", placeholder: "***********" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "fadeIn third field", placeholder: "confirmar senha" %>
 
       <div class="actions">
         <%= f.submit "Sign Up", class: "fadeIn fourth" %>
